unpackaged/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>