unpackaged/main/default/objects/Contact/fields/Law_Firm_Office_Account__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Office_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Location</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Law Firm Office</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Law Firm Office Account)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>