unpackaged/main/default/objects/Contact/fields/Legal_Team__c.field-meta.xml
<CustomField>
    <fullName>Legal_Team__c</fullName>
    <label>Legal Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legal_Departments</valueSetName>
    </valueSet>
</CustomField>