unpackaged/main/default/objects/Contact/fields/User_Tracker_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Tracker_ID__c</fullName>
    <description>Legacy User Tracker ID from Legal Tracker</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>User Tracker ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>