unpackaged/main/default/objects/Contact/recordTypes/IDB_Invest_Employee.recordType-meta.xml
<RecordType>
    <fullName>IDB_Invest_Employee</fullName>
    <active>true</active>
    <description>Legal Team</description>
    <label>IDB Invest Employee</label>
</RecordType>