unpackaged/main/default/objects/Contact/recordTypes/Law_Firm_Contact.recordType-meta.xml
<RecordType>
    <fullName>Law_Firm_Contact</fullName>
    <active>true</active>
    <label>Law Firm Contact</label>
</RecordType>