unpackaged/main/default/objects/Contact/recordTypes/Vendor_Other.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Other</fullName>
    <active>true</active>
    <label>Vendor/Other</label>
</RecordType>